--- a/kuby-backend/App.Kuby/App.Kuby.csproj
+++ b/kuby-backend/App.Kuby/App.Kuby.csproj
@@ -10,4 +10,17 @@
     <ProjectReference Include="..\Domain.Kuby\Domain.Kuby.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapping\" />
+    <Folder Include="UseCases\CubeBookings\Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Mediator.Abstractions" Version="3.0.1" />
+    <PackageReference Include="Mediator.SourceGenerator" Version="3.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
