--- a/electron/package.json
+++ b/electron/package.json
@@ -9,19 +9,19 @@
     "dist": "electron-builder"
   },
   "build": {
-    "appId": "com.quaderengineering.quader",
-    "productName": "quader",
+    "appId": "com.quaderengineering.kuby",
+    "productName": "Kuby",
     "files": [
       "./**/*",
       {
-        "from": "../quader-frontend/dist/quader-frontend/",
+        "from": "../kuby-frontend/dist/kuby-frontend/",
         "to": "frontend",
         "filter": [
           "**/*"
         ]
       },
       {
-        "from": "../quader-backend/publish/",
+        "from": "../kuby-backend/publish/",
         "to": "backend",
         "filter": [
           "**/*"
@@ -30,14 +30,14 @@
     ],
     "extraResources": [
       {
-        "from": "../quader-frontend/dist/quader-frontend/",
+        "from": "../kuby-frontend/dist/kuby-frontend/",
         "to": "frontend",
         "filter": [
           "**/*"
         ]
       },
       {
-        "from": "../quader-backend/publish/",
+        "from": "../kuby-backend/publish/",
         "to": "backend",
         "filter": [
           "**/*"
