--- a/kuby-backend/Infrastructure.Kuby/Infrastructure.Kuby.csproj
+++ b/kuby-backend/Infrastructure.Kuby/Infrastructure.Kuby.csproj
@@ -12,8 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\EntitiesConfig\" />
     <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
   </ItemGroup>
 
 </Project>
