--- a/kuby-backend/API.Kuby/Properties/launchSettings.json
+++ b/kuby-backend/API.Kuby/Properties/launchSettings.json
@@ -9,6 +9,16 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5000"
+    },
+    "https": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger/index.html",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5001"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
