--- a/kuby-frontend/package.json
+++ b/kuby-frontend/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^20.3.1",
     "@angular/router": "^20.3.1",
     "@primeuix/themes": "^1.2.3",
+    "ngx-image-cropper": "^9.1.5",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
     "rxjs": "~7.8.0",
